Name: una

Version:  2.0.1
Synopsis: Universal un-archiver utility

Description: A simple universal unarchiving utility.  Just point it at any
             archive or compressed file, and it spits out a single file or
             directory in the current directory with its contents.  Use -d to
             delete the original archive on success.  Use -f to overwrite any
             existing file or directory which might be in the way.

Homepage:           https://github.com/jwiegley/una
License:            BSD3
License-file:       LICENSE
Author:             John Wiegley
Maintainer:         John Wiegley <johnw@newartisans.com>
Category:           Utilities
Build-type:         Simple
Cabal-version:      >= 1.8

Extra-Source-Files: README.md

Executable una
    Main-is: Main.hs
    Ghc-options: -threaded

    Build-depends: base >= 4 && < 5, cmdargs, io-storage, directory, process,
                   filepath, bytestring

Source-repository head
  type:     git
  location: https://github.com/jwiegley/una
