cabal-version:   2.4
name:            una
version:         2.1.0
synopsis:        Universal un-archiver utility
description:
  A simple universal unarchiving utility.  Just point it at any archive or
  compressed file, and it spits out a single file or directory in the current
  directory with its contents.  Use -d to delete the original archive on
  success.  Use -f to overwrite any existing file or directory which might
  be in the way.

homepage:        https://github.com/jwiegley/una
license:         BSD-3-Clause
license-file:    LICENSE.md
author:          John Wiegley
maintainer:      John Wiegley <johnw@newartisans.com>
category:        Utils
build-type:      Simple
extra-doc-files: README.md

executable una
  main-is:       Main.hs
  ghc-options:   -threaded -Wall -Wno-name-shadowing -Wno-missing-signatures
  build-depends:
    , base        >=4 && <5
    , bytestring
    , cmdargs
    , directory
    , filepath
    , io-storage
    , process

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/jwiegley/una
